--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 </head>
 <body>
     <header>
+        <img src="https://lacandelaria.com.ve/static/media/Farvicon_no_fondo.1f187348ac9bfa9b0080.png">
         <h1>¡Descubre el Mundo de la Informática!</h1>
         <p>Una aventura digital para jóvenes como tú.</p>
     </header>
