--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
             font-size: 2em;
             margin-bottom: 20px;
         }
+        header img {
+            width: 40px;
+        }
         header p {
             font-size: 1.2em;
         }
+        
         nav {
             background-color:rgb(63, 3, 141);
             padding: 9px;
@@ -172,9 +176,9 @@
 </head>
 <body>
     <header>
-        <img src="https://lacandelaria.com.ve/static/media/Farvicon_no_fondo.1f187348ac9bfa9b0080.png">
         <h1>¡Descubre el Mundo de la Informática!</h1>
         <p>Una aventura digital para jóvenes como tú.</p>
+        <img src="https://lacandelaria.com.ve/static/media/Farvicon_no_fondo.1f187348ac9bfa9b0080.png" href="lacandelaria.com.ve">
     </header>
         <nav>
     <a href="#home">
