--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             margin-bottom: 20px;
         }
         header img {
-            width: 40px;
+            size: 23px;
         }
         header p {
             font-size: 1.2em;
