--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             margin-bottom: 20px;
         }
         header img {
-            size: 23px;
+            width: 150px;
         }
         header p {
             font-size: 1.2em;
