--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 <body>
     <header>
         <h1>¡Descubre el Mundo de la Informática!</h1>
-        <p>Una aventura digital para jóvenes como tú.</p>
-        <img src="https://lacandelaria.com.ve/static/media/Farvicon_no_fondo.1f187348ac9bfa9b0080.png" href="lacandelaria.com.ve">
+        <p>Una aventura digital para jóvenes como tú.</p>         
+        <a href="https://lacandelaria.com.ve" src="https://lacandelaria.com.ve/static/media/Farvicon_no_fondo.1f187348ac9bfa9b0080.png"></a>
     </header>
         <nav>
     <a href="#home">
