--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
             font-size: 2em;
             margin-bottom: 20px;
         }
-        header img {
-            width: 150px;
-        }
         header p {
             font-size: 1.2em;
         }
-        
+        .lacandelaria a img {
+            width: 100px;
+        }
         nav {
             background-color:rgb(63, 3, 141);
             padding: 9px;
@@ -177,8 +176,11 @@
 <body>
     <header>
         <h1>¡Descubre el Mundo de la Informática!</h1>
-        <p>Una aventura digital para jóvenes como tú.</p>         
-        <a href="https://lacandelaria.com.ve" src="https://lacandelaria.com.ve/static/media/Farvicon_no_fondo.1f187348ac9bfa9b0080.png"></a>
+        <p>Una aventura digital para jóvenes como tú.</p>
+        <div id="lacandelaria">
+        <a href="https://lacandelaria">
+        <img src="https://lacandelaria.com.ve/static/media/Farvicon_no_fondo.1f187348ac9bfa9b0080.png"></a>
+        </div>
     </header>
         <nav>
     <a href="#home">
