--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         header p {
             font-size: 1.2em;
         }
-        .lacandelaria a img {
+        a img {
             width: 100px;
         }
         nav {
