--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             font-size: 1.2em;
         }
         a img {
+            padding: 50px 30px;
             width: 100px;
         }
         nav {
